--- a/css/reset.scss
+++ b/css/reset.scss
@@ -1,5 +1,7 @@
 @use '../node_modules/bulma/sass/base/minireset.sass';
 
+@import '../fonts/fontawesome5/css/all.min.css';
+
 html {
     width: 100%;
     height: 100%;
@@ -13,7 +15,7 @@ body {
 
     background-color: #fefefe;
 
-    font-family: "Lato";
+    font-family: "Lato-Light";
 }
 
 ::-webkit-scrollbar {
@@ -31,6 +33,22 @@ body {
 
 
 @font-face {
-    font-family: "Lato";
+    font-family: "Lato-Light";
     src: url(../fonts/lato/Lato-Light.ttf);
+}
+
+@font-face {
+    font-family: "OpenSans-Light";
+    src: url(../fonts/opensans/OpenSans-Light.ttf);
+}
+
+
+a {
+    color: inherit;
+    text-decoration: underline;
+    text-decoration-style: dotted;
+}
+
+
+a:hover {
 }
