--- a/css/styling.css
+++ b/css/styling.css
@@ -137,6 +137,7 @@ body {
   height: 425px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 20px !important;
   padding-bottom: 50px;
   position: relative;
   top: 40px;
@@ -162,8 +163,8 @@ body {
   width: 1024px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   position: relative;
 }
 .content h1 {
@@ -171,8 +172,9 @@ body {
   font-weight: bolder;
 }
 .content p {
-  margin: 0.5em;
+  margin: 0.5em 0;
   font-size: x-large;
+  line-height: 1.5em;
 }
 
 .content-split {
@@ -221,6 +223,7 @@ body {
 }
 
 .footer {
+  padding: 20px 0;
   background: url("../images/footer/siesta_logo_white_on_transparent.svg") no-repeat right center;
   background-size: contain;
 }
