--- a/css/styling.scss
+++ b/css/styling.scss
@@ -20,6 +20,7 @@ body {
     height: 425px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 20px !important;
     padding-bottom: 50px;
 
     position: relative;
@@ -50,8 +51,8 @@ body {
     width: 1024px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     position: relative;
 
     & h1 {
@@ -60,8 +61,9 @@ body {
     }
 
     & p {
-        margin: 0.5em;
+        margin: 0.5em 0;
         font-size: x-large;
+        line-height: 1.5em;
     }
 }
 
@@ -119,6 +121,8 @@ body {
 }
 
 .footer {
+    padding: 20px 0;
+
     background: url("../images/footer/siesta_logo_white_on_transparent.svg") no-repeat right center;
     background-size: contain;
 
