--- a/css/styling.css
+++ b/css/styling.css
@@ -209,7 +209,7 @@ body {
 }
 
 .content-wrapper-performance {
-  background-color: #2a9d8f;
+  background-color: #c2efe9;
 }
 
 .content-wrapper-getting-started {
