--- a/css/styling.css
+++ b/css/styling.css
@@ -214,7 +214,7 @@ body {
 
 .content-wrapper-getting-started {
   text-align: center;
-  background-color: #e9c46a;
+  background-color: #efd38f;
 }
 .content-wrapper-getting-started .content-center .get_started_link span {
   position: relative;
