--- a/css/styling.scss
+++ b/css/styling.scss
@@ -111,7 +111,7 @@ body {
 
 .content-wrapper-getting-started {
     text-align: center;
-    background-color: $secondary_pass;
+    background-color: color.scale($secondary_pass, $lightness: 25%);
 
     $offset: 3ch;
 
@@ -143,15 +143,7 @@ body {
     }
 
     .get_started_link {
-        //display: inline-block;
-        //position: relative;
-        //padding-bottom: 80px;
-
         .logo {
-            //display: inline-block;
-            //position: absolute;
-            //left: 0;
-            //top: 1.1em;
             min-height: 80px;
             min-width: 80px;
         }
