--- a/css/styling.css
+++ b/css/styling.css
@@ -138,6 +138,10 @@ body {
   padding: 1em;
 }
 
+.header-logo-mini {
+  display: none;
+}
+
 .header-wrapper {
   background-image: url("../images/header/header_background_waves.svg");
   background-position: left calc(50% + 70px) top 0%;
@@ -170,7 +174,7 @@ body {
   height: 425px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 20px !important;
+  padding-top: 0px !important;
   padding-bottom: 50px;
   position: relative;
   top: 40px;
@@ -356,6 +360,15 @@ body {
   }
   .header-wrapper .background-right {
     display: none;
+  }
+}
+@media screen and (max-width: 550px) {
+  .header-logo-full {
+    display: none;
+  }
+
+  .header-logo-mini {
+    display: block;
   }
 }
 
