--- a/css/styling.scss
+++ b/css/styling.scss
@@ -23,6 +23,10 @@ body {
     padding: 1em;
 }
 
+.header-logo-mini {
+    display: none;
+}
+
 .header-wrapper {
     background-image: url("../images/header/header_background_waves.svg");
     background-position: left calc(50% + 70px) top 0%;
@@ -74,7 +78,7 @@ body {
     height: 425px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 20px !important;
+    padding-top: 0px !important;
     padding-bottom: 50px;
 
     position: relative;
@@ -300,4 +304,14 @@ body {
         }
     }
 
+}
+
+
+@media screen and (max-width: 550px) {
+    .header-logo-full {
+        display: none;
+    }
+    .header-logo-mini {
+        display: block;
+    }
 }
