--- a/css/styling.scss
+++ b/css/styling.scss
@@ -37,6 +37,7 @@ body {
 
     & .background-left {
         z-index: -1;
+        margin-bottom: 15px;
         position: absolute;
         left: 0;
         top: 0;
@@ -45,17 +46,18 @@ body {
         background: linear-gradient(
             to top,
             #318483 0px,
-            #318483 122px,
-            #2e616b 122px,
-            #2e616b 186px,
-            #29525e 186px,
-            #29525e 220px,
-            #264653 220px,
+            #318483 123px,
+            #2e616b 123px,
+            #2e616b 188px,
+            #29525e 188px,
+            #29525e 221px,
+            #264653 221px,
             #264653 100%
         );
     }
     & .background-right {
         z-index: -1;
+        margin-bottom: 16px;
         position: absolute;
         right: 0;
         top: 0;
@@ -257,7 +259,7 @@ body {
 }
 
 
-@media screen and (min-width: 800px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     html {
         font-size: 12.5px;
     }
@@ -286,24 +288,6 @@ body {
     html {
         font-size: 10px;
     }
-
-    .content {
-        width: 100%;
-    }
-
-    .header {
-        width: 100%;
-    }
-
-    .header-wrapper {
-        & .background-left {
-            display: none;
-        }
-        & .background-right {
-            display: none;
-        }
-    }
-
 }
 
 
