--- a/css/styling.scss
+++ b/css/styling.scss
@@ -30,7 +30,9 @@ body {
 .header-background-waves {
     z-index: -1;
     position: absolute;
-    left: 0;
+    // centering trick
+    transform: translateX(-50%);
+    left: 50%;
     top: 0;
     height: 100%;
     width: auto;
@@ -43,39 +45,37 @@ body {
 
     & .background-left {
         z-index: -1;
-        margin-bottom: 15px;
         position: absolute;
         left: 0;
         top: 0;
-        right: calc(50% + 950px);
+        right: calc(50% + 1150px);
         bottom: 0;
         background: linear-gradient(
             to top,
             #318483 0px,
-            #318483 123px,
-            #2e616b 123px,
-            #2e616b 188px,
-            #29525e 188px,
-            #29525e 221px,
-            #264653 221px,
+            #318483 124.5px,
+            #2e616b 124.5px,
+            #2e616b 190px,
+            #29525e 190px,
+            #29525e 223px,
+            #264653 223px,
             #264653 100%
         );
     }
     & .background-right {
         z-index: -1;
-        margin-bottom: 16px;
         position: absolute;
         right: 0;
         top: 0;
-        left: calc(50% + 1050px);
+        left: calc(50% + 1150px);
         bottom: 0;
         background: linear-gradient(
             to top,
             #318483 0px,
-            #318483 117px,
-            #2e616b 117px,
-            #2e616b 200px,
-            #264653 200px,
+            #318483 120px,
+            #2e616b 120px,
+            #2e616b 203px,
+            #264653 203px,
             #264653 100%
         );
     }
