--- a/css/styling.scss
+++ b/css/styling.scss
@@ -39,7 +39,7 @@ body {
     object-fit: cover;
 }
 
-.header-wrapper {
+.content-wrapper-header {
     padding-bottom: 1.875rem;
     position: relative;
 
@@ -81,7 +81,7 @@ body {
     }
 }
 
-.header {
+.content-header {
     width: var(--content-width);
     height: 26rem;
     margin-left: auto;
@@ -183,12 +183,17 @@ body {
     background-color: #fefefe;
 }
 
-.content-wrapper-performance {
+.content-wrapper-onetool {
     background-color: color.scale($primary_pass, $lightness: 75%);
 }
 
 .content-wrapper-ergonomics {
     //background-color: $secondary_pass;
+}
+
+.content-wrapper-performance {
+    //background-color: color.scale($primary_pass, $lightness: 75%);
+    background-color: #fefefe;
 }
 
 
@@ -245,12 +250,12 @@ body {
 }
 
 
-.footer-wrapper {
+.content-wrapper-footer {
     color: $white;
     background-color: $deccent;
 }
 
-.footer {
+.content-footer {
     position: relative;
     padding: 1.25rem 0;
     display: flex;
@@ -293,11 +298,11 @@ body {
         width: 100%;
     }
 
-    .header {
+    .content-header {
         width: 100%;
     }
 
-    .header-wrapper {
+    .content-wrapper-header {
         & .background-left {
             display: none;
         }
@@ -314,7 +319,7 @@ body {
         font-size: 10px;
     }
 
-    .header {
+    .content-header {
         height: 24.6rem;
     }
 
@@ -329,7 +334,7 @@ body {
 
 
 @media screen and (max-width: 550px) {
-    .header {
+    .content-header {
         height: 19rem;
     }
 
@@ -351,7 +356,7 @@ body {
 
 
 @media screen and (max-width: 450px) {
-    .header {
+    .content-header {
         height: 14rem;
     }
 }
