--- a/css/styling.css
+++ b/css/styling.css
@@ -153,11 +153,11 @@ body {
   object-fit: cover;
 }
 
-.header-wrapper {
+.content-wrapper-header {
   padding-bottom: 1.875rem;
   position: relative;
 }
-.header-wrapper .background-left {
+.content-wrapper-header .background-left {
   z-index: -1;
   position: absolute;
   left: 0;
@@ -166,7 +166,7 @@ body {
   bottom: 0;
   background: linear-gradient(to top, #318483 0px, #318483 124.5px, #2e616b 124.5px, #2e616b 190px, #29525e 190px, #29525e 223px, #264653 223px, #264653 100%);
 }
-.header-wrapper .background-right {
+.content-wrapper-header .background-right {
   z-index: -1;
   position: absolute;
   right: 0;
@@ -176,7 +176,7 @@ body {
   background: linear-gradient(to top, #318483 0px, #318483 120px, #2e616b 120px, #2e616b 203px, #264653 203px, #264653 100%);
 }
 
-.header {
+.content-header {
   width: var(--content-width);
   height: 26rem;
   margin-left: auto;
@@ -186,23 +186,23 @@ body {
   position: relative;
   top: 40px;
 }
-.header .tbar {
+.content-header .tbar {
   position: absolute;
   right: 0;
   top: 0;
 }
-.header .tbar a {
+.content-header .tbar a {
   margin-left: 1em;
 }
-.header .tbar .icon {
+.content-header .tbar .icon {
   color: #457e96;
   transition: color 0.2s ease-in-out;
 }
-.header .tbar .icon:hover {
+.content-header .tbar .icon:hover {
   color: #fefefe;
   background-color: #264653;
 }
-.header.content {
+.content-header.content {
   top: 16px;
 }
 
@@ -267,8 +267,12 @@ body {
   background-color: #fefefe;
 }
 
-.content-wrapper-performance {
+.content-wrapper-onetool {
   background-color: #c2efe9;
+}
+
+.content-wrapper-performance {
+  background-color: #fefefe;
 }
 
 .content-wrapper-getting-started {
@@ -316,12 +320,12 @@ body {
   line-height: 1.5em;
 }
 
-.footer-wrapper {
+.content-wrapper-footer {
   color: #fefefe;
   background-color: #264653;
 }
 
-.footer {
+.content-footer {
   position: relative;
   padding: 1.25rem 0;
   display: flex;
@@ -330,11 +334,11 @@ body {
   height: 3.5rem;
   font-size: 1rem;
 }
-.footer > a {
+.content-footer > a {
   margin-left: 3em;
   margin-right: 3em;
 }
-.footer .footer-logo {
+.content-footer .footer-logo {
   height: 2rem;
 }
 
@@ -359,14 +363,14 @@ body {
     width: 100%;
   }
 
-  .header {
+  .content-header {
     width: 100%;
   }
 
-  .header-wrapper .background-left {
+  .content-wrapper-header .background-left {
     display: none;
   }
-  .header-wrapper .background-right {
+  .content-wrapper-header .background-right {
     display: none;
   }
 }
@@ -375,7 +379,7 @@ body {
     font-size: 10px;
   }
 
-  .header {
+  .content-header {
     height: 24.6rem;
   }
 
@@ -388,7 +392,7 @@ body {
   }
 }
 @media screen and (max-width: 550px) {
-  .header {
+  .content-header {
     height: 19rem;
   }
 
@@ -409,7 +413,7 @@ body {
   }
 }
 @media screen and (max-width: 450px) {
-  .header {
+  .content-header {
     height: 14rem;
   }
 }
