--- a/css/styling.css
+++ b/css/styling.css
@@ -286,15 +286,12 @@ body {
   flex-direction: row-reverse;
 }
 
-.content-wrapper-performance {
-  background-color: #fefefe;
-}
-
 .content-wrapper-getting-started {
   text-align: center;
   background-color: #efd38f;
 }
 .content-wrapper-getting-started .content-center .logos {
+  display: block;
   position: relative;
   width: 12.5rem;
   text-align: start;
@@ -328,7 +325,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.content-wrapper-getting-started .content-column > a {
+.content-wrapper-getting-started .content-column > a:nth-child(1) {
   flex: 1;
   margin: 0.5em 0;
   font-size: 1.5rem;
