--- a/css/styling.scss
+++ b/css/styling.scss
@@ -215,6 +215,7 @@ body {
 
     & .content-center {
         .logos {
+            display: block;
             position: relative;
             width: 12.5rem;
             text-align: start;
@@ -252,7 +253,7 @@ body {
         flex-direction: column;
         align-items: center;
 
-        & > a {
+        & > a:nth-child(1) {
             flex : 1;
             margin: 0.5em 0;
             font-size: 1.5rem;
