--- a/css/styling.css
+++ b/css/styling.css
@@ -431,6 +431,11 @@ body {
   .content-wrapper-onetool .content-right {
     height: 14rem;
   }
+
+  .content h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
 }
 @media screen and (max-width: 450px) {
   .content-header {
