--- a/css/styling.scss
+++ b/css/styling.scss
@@ -376,6 +376,13 @@ body {
             height: 14rem;
         }
     }
+
+    .content {
+        & h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+    }
 }
 
 
