--- a/css/styling.scss
+++ b/css/styling.scss
@@ -177,6 +177,10 @@ body {
     & p:last-child .logo {
         margin: 0 0.4em;
     }
+
+    .part2 {
+        margin-top: 2em;
+    }
 }
 
 .content-wrapper:nth-child(2) {
